Added flags and sequenceType to column for maintenance plugin (414719: in .createNewColumn of a jsTableObject of the maintenance plugin, it is missing that you can set the column to be type UUID) Case: 414719